--- a/index.html
+++ b/index.html
@@ -8,54 +8,28 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    body {
-      font-family: 'Montserrat', sans-serif;
-      margin: 0; padding: 0;
-      background: #f9f9f9; color: #333;
-    }
-    .container {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 0 20px;
-    }
-    h1 {
-      text-align: center; color: #004AAD; margin-bottom: 10px;
-    }
-    p.intro {
-      text-align: center; margin-bottom: 30px; line-height: 1.6;
-    }
+    /* prevent horizontal scrolling */
+    body { font-family: 'Montserrat', sans-serif; margin: 0; padding: 0; overflow-x: hidden; background: #f9f9f9; color: #333; }
+    .container { max-width: 800px; margin: 40px auto; padding: 0 20px; }
+    h1 { text-align: center; color: #004AAD; margin-bottom: 10px; }
+    p.intro { text-align: center; margin-bottom: 30px; line-height: 1.6; }
 
-    /* hide the radios */
-    input[name="slider"] {
-      position: absolute;
-      opacity: 0;
-      pointer-events: none;
-    }
-
-    /* slides hidden by default */
+    /* hide radios */
+    input[name="slider"] { position: absolute; opacity: 0; pointer-events: none; }
     .slide { display: none; }
-    /* active slide = flex column centered */
+    /* active slide */
     #slide1:checked ~ .video-slider-wrapper .slide1,
     #slide2:checked ~ .video-slider-wrapper .slide2,
     #slide3:checked ~ .video-slider-wrapper .slide3 {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      display: flex; flex-direction: column; align-items: center;
     }
 
-    .video-slider-wrapper {
-      margin-bottom: 40px;
-      width: 100%;
-    }
-    .video-wrapper {
-      position: relative;
-      width: 100%;
-      max-width: 100%;
-    }
+    .video-slider-wrapper { margin-bottom: 40px; width: 100%; }
+    .video-wrapper { position: relative; width: 100%; }
     .video-container {
       position: relative;
       width: 100%;
-      padding-bottom: 56.25%; /* 16:9 */
+      padding-bottom: 56.25%;
       height: 0;
       overflow: hidden;
       border-radius: 8px;
@@ -63,92 +37,56 @@
     }
     .video-container iframe {
       position: absolute; top: 0; left: 0;
-      width: 100%; height: 100%;
-      border: none;
+      width: 100%; height: 100%; border: none;
     }
 
-    /* desktop arrows */
+    /* desktop side arrows */
     .video-wrapper .arrow {
-      position: absolute;
-      top: 50%;
+      position: absolute; top: 50%;
       transform: translateY(-50%);
       width: 50px; height: 50px;
-      background: #004AAD;
-      color: #fff;
+      background: #004AAD; color: #fff;
       border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      display: flex; align-items: center; justify-content: center;
+      cursor: pointer; box-shadow: 0 2px 6px rgba(0,0,0,0.2);
       transition: background 0.2s;
     }
-    .video-wrapper .arrow:hover {
-      background: #00337A;
-    }
+    .video-wrapper .arrow:hover { background: #00337A; }
     .video-wrapper .prev { left: -70px; }
     .video-wrapper .next { right: -70px; }
-
     /* phantom placeholders */
-    .slide1 .prev,
-    .slide3 .next {
-      visibility: hidden;
-    }
+    .slide1 .prev, .slide3 .next { visibility: hidden; }
 
-    /* mobile nav under video */
-    .mobile-nav {
-      display: none;
-      margin-top: 10px;
-      gap: 20px;
-      justify-content: center;
-    }
+    /* mobile/nav fallback */
+    .mobile-nav { display: none; margin-top: 10px; gap: 20px; justify-content: center; }
     .mobile-nav .arrow {
-      position: static;
-      transform: none;
+      position: static; transform: none;
     }
 
-    /* show mobile nav on small screens, hide desktop arrows */
-    @media (max-width: 600px) {
+    /* hide side arrows & show mobile nav on <=768px */
+    @media (max-width: 768px) {
       .video-wrapper .arrow { display: none; }
       .mobile-nav { display: flex; }
-      /* phantom placeholders for mobile nav too */
-      .slide1 .mobile-nav .prev,
-      .slide3 .mobile-nav .next {
-        visibility: hidden;
-      }
+      /* phantom for mobile nav */
+      .slide1 .mobile-nav .prev, .slide3 .mobile-nav .next { visibility: hidden; }
     }
 
     /* title & notice */
-    .slide h2 {
-      text-align: center;
-      color: #004AAD;
-      margin-bottom: 10px;
-    }
+    .slide h2 { text-align: center; color: #004AAD; margin-bottom: 10px; }
     .slide .notice {
-      display: inline-flex;
-      align-items: center;
-      gap: 10px;
-      background: #fff;
-      border-left: 4px solid #004AAD;
-      padding: 10px 15px;
-      font-weight: 600;
-      margin: 0 auto 20px;
+      display: inline-flex; align-items: center; gap: 10px;
+      background: #fff; border-left: 4px solid #004AAD;
+      padding: 10px 15px; font-weight: 600; margin: 0 auto 20px;
       border-radius: 4px;
     }
     .slide .notice i { color: #004AAD; }
 
-    /* test button + form */
+    /* test button */
     .btn {
-      display: inline-block;
-      background: #004AAD;
-      color: #fff;
-      padding: 15px 30px;
-      font-size: 16px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.25s ease;
-      margin-top: 20px;
+      display: inline-block; background: #004AAD; color: #fff;
+      padding: 15px 30px; font-size: 16px; border: none;
+      border-radius: 6px; cursor: pointer;
+      transition: background 0.25s ease; margin-top: 20px;
     }
     .btn:hover { background: #00337A; }
     #formContainer { display: none; margin-top: 50px; }
@@ -162,7 +100,7 @@
       You must score 80% or higher.
     </p>
 
-    <!-- slide-tracker radios -->
+    <!-- radio+slides wrapper -->
     <input type="radio" name="slider" id="slide1" checked>
     <input type="radio" name="slider" id="slide2">
     <input type="radio" name="slider" id="slide3">
@@ -254,7 +192,7 @@
     </div>
   </div>
 
-  <!-- HeyForm embed script -->
+  <!-- HeyForm embed -->
   <script src="https://my.heyform.net/embed"></script>
   <script>
     document.getElementById('testButton').addEventListener('click', function() {
