--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     /* Active slide becomes visible & centered */
     #slide1:checked ~ .video-slider-wrapper .slide1,
     #slide2:checked ~ .video-slider-wrapper .slide2,
-    #slide3:checked ~ .video-slider-wrapper .slide3 {
+    #slide3:checked ~ .video-slider-wrapper .slide3,
+    #slide4:checked ~ .video-slider-wrapper .slide4 {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -98,7 +99,7 @@
     .video-wrapper .prev { left: -70px; }
     .video-wrapper .next { right: -70px; }
     /* Phantom placeholders */
-    .slide1 .prev, .slide3 .next {
+    .slide1 .prev, .slide4 .next {
       visibility: hidden;
     }
 
@@ -135,7 +136,7 @@
       .mobile-nav { display: flex; }
       /* Phantom placeholders for mobile nav as well */
       .slide1 .mobile-nav .prev,
-      .slide3 .mobile-nav .next {
+      .slide4 .mobile-nav .next {
         visibility: hidden;
       }
     }
@@ -161,16 +162,7 @@
       color: #004AAD;
     }
 
-    /* Test-container hidden until last slide */
-    .test-container {
-      display: none;
-    }
-    #slide3:checked ~ .test-container {
-      display: block;
-      text-align: center;
-    }
-
-    /* Test button & form */
+    /* Test button styling */
     .btn {
       display: inline-block;
       background: #004AAD;
@@ -196,13 +188,14 @@
   <div class="container">
     <h1>Mover & Swamper Certification Test</h1>
     <p class="intro">
-      Welcome! To earn your certification, watch each full video below, then click “Take Certification Test.”<br>
+      Welcome! To earn your certification, watch each full video below, then click “Take Certification Test.”
     </p>
 
     <!-- Radios to track slides -->
     <input type="radio" name="slider" id="slide1" checked>
     <input type="radio" name="slider" id="slide2">
     <input type="radio" name="slider" id="slide3">
+    <input type="radio" name="slider" id="slide4">
 
     <div class="video-slider-wrapper">
       <!-- Slide 1 -->
@@ -269,31 +262,53 @@
               allowfullscreen>
             </iframe>
           </div>
-          <label for="slide3" class="arrow next"><i class="fa-solid fa-chevron-right"></i></label>
+          <!-- FINAL arrow leads to slide4 -->
+          <label for="slide4" class="arrow next"><i class="fa-solid fa-chevron-right"></i></label>
         </div>
         <div class="mobile-nav">
           <label for="slide2" class="arrow prev"><i class="fa-solid fa-chevron-left"></i></label>
-          <label for="slide3" class="arrow next"><i class="fa-solid fa-chevron-right"></i></label>
+          <label for="slide4" class="arrow next"><i class="fa-solid fa-chevron-right"></i></label>
         </div>
       </div>
-    </div>
 
-    <div class="test-container">
-      <button id="testButton" class="btn">Take Certification Test</button>
-      <div id="formContainer">
-        <div
-          class="heyform"
-          data-heyform-id="YOUR_FORM_ID"
-          data-heyform-mode="0"
-          data-heyform-button-text="Start Test">
+      <!-- Slide 4: Test page -->
+      <div class="slide slide4">
+        <h2>You’re Ready!</h2>
+        <div class="notice">
+          <i class="fa-solid fa-check-circle" style="color:#004AAD;"></i>
+          You’ve completed all training videos. Click below to take the test!
+        </div>
+        <button id="testButton" class="btn">Take Certification Test</button>
+        <div id="formContainer">
+          <div
+            class="heyform"
+            data-heyform-id="YOUR_FORM_ID"
+            data-heyform-mode="0"
+            data-heyform-button-text="Start Test">
+          </div>
         </div>
       </div>
     </div>
   </div>
 
+  <!-- Canvas-Confetti for celebration -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
   <!-- HeyForm embed script -->
   <script src="https://my.heyform.net/embed"></script>
   <script>
+    // Fire confetti when slide4 is checked
+    const slide4 = document.getElementById('slide4');
+    slide4.addEventListener('change', () => {
+      if (slide4.checked) {
+        confetti({
+          particleCount: 100,
+          spread: 70,
+          origin: { y: 0.6 }
+        });
+      }
+    });
+
+    // Reveal HeyForm on button click
     document.getElementById('testButton').addEventListener('click', function() {
       document.getElementById('formContainer').style.display = 'block';
       document.getElementById('formContainer').scrollIntoView({ behavior: 'smooth' });
