--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   <div
     data-heyform-id="fPdwIszH"
     data-heyform-type="modal"
-    data-heyform-custom-url="http://stafftools-heyform-d7f372-45-76-22-23.traefik.me/form/"
+    data-heyform-custom-url="https://stafftools-heyform-d7f372-45-76-22-23.traefik.me/form/"
     data-heyform-size="large"
     data-heyform-open-trigger="manual"
     data-heyform-trigger-background="#1d4ed8"
