--- a/index.html
+++ b/index.html
@@ -8,15 +8,161 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    /* your existing CSS… */
+    /* Prevent horizontal scrolling */
+    body {
+      font-family: 'Montserrat', sans-serif;
+      margin: 0; padding: 0;
+      overflow-x: hidden;
+      background: #f9f9f9;
+      color: #333;
+    }
+    .container {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    h1 {
+      text-align: center;
+      color: #004AAD;
+      margin-bottom: 10px;
+    }
+    p.intro {
+      text-align: center;
+      margin-bottom: 30px;
+      line-height: 1.6;
+    }
+
+    /* Hide the radios */
+    input[name="slider"] {
+      position: absolute;
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    /* Slides hidden by default */
+    .slide {
+      display: none;
+    }
+    /* Active slide */
+    #slide1:checked ~ .video-slider-wrapper .slide1,
+    #slide2:checked ~ .video-slider-wrapper .slide2,
+    #slide3:checked ~ .video-slider-wrapper .slide3,
+    #slide4:checked ~ .video-slider-wrapper .slide4 {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .video-slider-wrapper {
+      margin-bottom: 40px;
+      width: 100%;
+    }
+    .video-wrapper {
+      position: relative;
+      width: 100%;
+    }
+    .video-container {
+      position: relative;
+      width: 100%;
+      padding-bottom: 56.25%;
+      height: 0;
+      overflow: hidden;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    .video-container iframe {
+      position: absolute; top: 0; left: 0;
+      width: 100%; height: 100%;
+      border: none;
+    }
+
+    /* Desktop side arrows */
+    .video-wrapper .arrow {
+      position: absolute; top: 50%;
+      transform: translateY(-50%);
+      width: 50px; height: 50px;
+      background: #004AAD;
+      color: #fff;
+      border-radius: 50%;
+      display: flex; align-items: center; justify-content: center;
+      cursor: pointer;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      transition: background 0.2s;
+    }
+    .video-wrapper .arrow:hover { background: #00337A; }
+    .video-wrapper .prev { left: -70px; }
+    .video-wrapper .next { right: -70px; }
+    /* Phantom placeholders */
+    .slide1 .prev, .slide4 .next { visibility: hidden; }
+
+    /* Mobile nav under the video */
+    .mobile-nav {
+      display: none; width: 100%;
+      margin-top: 20px;
+      justify-content: space-between;
+      align-items: center;
+      box-sizing: border-box;
+    }
+    .mobile-nav .arrow {
+      width: 50px; height: 50px;
+      background: #004AAD; color: #fff;
+      border-radius: 50%;
+      display: flex; align-items: center; justify-content: center;
+      cursor: pointer;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      transition: background 0.2s;
+    }
+    .mobile-nav .arrow:hover { background: #00337A; }
+
+    @media (max-width: 768px) {
+      .video-wrapper .arrow { display: none; }
+      .mobile-nav { display: flex; }
+      .slide1 .mobile-nav .prev,
+      .slide4 .mobile-nav .next { visibility: hidden; }
+    }
+
+    /* Title & notice */
+    .slide h2 {
+      text-align: center;
+      color: #004AAD;
+      margin-bottom: 10px;
+    }
+    .slide .notice {
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+      background: #fff;
+      border-left: 4px solid #004AAD;
+      padding: 10px 15px;
+      font-weight: 600;
+      margin: 0 auto 20px;
+      border-radius: 4px;
+    }
+    .slide .notice i { color: #004AAD; }
+
+    /* Test button styling - centered */
+    .btn {
+      display: block;
+      margin: 20px auto 0;
+      background: #004AAD;
+      color: #fff;
+      padding: 15px 30px;
+      font-size: 16px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background 0.25s ease;
+    }
+    .btn:hover { background: #00337A; }
   </style>
 </head>
 <body>
-  <!-- HeyForm modal (now over HTTPS) -->
+
+  <!-- HeyForm modal configuration -->
   <div
     data-heyform-id="fPdwIszH"
     data-heyform-type="modal"
-    data-heyform-custom-url="https://stafftools-heyform-d7f372-45-76-22-23.traefik.me/form/"
+    data-heyform-custom-url="https//stafftools-heyform-d7f372-45-76-22-23.traefik.me/form/"
     data-heyform-size="large"
     data-heyform-open-trigger="manual"
     data-heyform-trigger-background="#1d4ed8"
@@ -26,18 +172,116 @@
   </div>
 
   <div class="container">
-    <!-- your slider HTML… -->
-    <!-- On slide 4: -->
-    <button id="testButton" class="btn">Take Certification Test</button>
+    <h1>Mover & Swamper Certification Test</h1>
+    <p class="intro">
+      Welcome! To earn your certification, watch each full video below, then click “Take Certification Test.”
+    </p>
+
+    <!-- Radios to track slides -->
+    <input type="radio" name="slider" id="slide1" checked>
+    <input type="radio" name="slider" id="slide2">
+    <input type="radio" name="slider" id="slide3">
+    <input type="radio" name="slider" id="slide4">
+
+    <div class="video-slider-wrapper">
+      <!-- Slide 1 -->
+      <div class="slide slide1">
+        <h2>Section 1: Back Safety</h2>
+        <div class="notice">
+          <i class="fa-solid fa-triangle-exclamation"></i>
+          Important: Please watch the full video before moving on!
+        </div>
+        <div class="video-wrapper">
+          <label for="slide1" class="arrow prev"><i class="fa-solid fa-chevron-left"></i></label>
+          <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLG0DGUHeVSlY4zgtv--3KrABC71q5ib8M"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+          </div>
+          <label for="slide2" class="arrow next"><i class="fa-solid fa-chevron-right"></i></label>
+        </div>
+        <div class="mobile-nav">
+          <label for="slide1" class="arrow prev"><i class="fa-solid fa-chevron-left"></i></label>
+          <label for="slide2" class="arrow next"><i class="fa-solid fa-chevron-right"></i></label>
+        </div>
+      </div>
+
+      <!-- Slide 2 -->
+      <div class="slide slide2">
+        <h2>Section 2: Proper Lifting Techniques</h2>
+        <div class="notice">
+          <i class="fa-solid fa-triangle-exclamation"></i>
+          Important: Please watch the full video before moving on!
+        </div>
+        <div class="video-wrapper">
+          <label for="slide1" class="arrow prev"><i class="fa-solid fa-chevron-left"></i></label>
+          <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=ANOTHER_PLAYLIST_ID_2"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+          </div>
+          <label for="slide3" class="arrow next"><i class="fa-solid fa-chevron-right"></i></label>
+        </div>
+        <div class="mobile-nav">
+          <label for="slide1" class="arrow prev"><i class="fa-solid fa-chevron-left"></i></label>
+          <label for="slide3" class="arrow next"><i class="fa-solid fa-chevron-right"></i></label>
+        </div>
+      </div>
+
+      <!-- Slide 3 -->
+      <div class="slide slide3">
+        <h2>Section 3: Equipment & Tools</h2>
+        <div class="notice">
+          <i class="fa-solid fa-triangle-exclamation"></i>
+          Important: Please watch the full video before moving on!
+        </div>
+        <div class="video-wrapper">
+          <label for="slide2" class="arrow prev"><i class="fa-solid fa-chevron-left"></i></label>
+          <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=ANOTHER_PLAYLIST_ID_3"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+          </div>
+          <label for="slide4" class="arrow next"><i class="fa-solid fa-chevron-right"></i></label>
+        </div>
+        <div class="mobile-nav">
+          <label for="slide2" class="arrow prev"><i class="fa-solid fa-chevron-left"></i></label>
+          <label for="slide4" class="arrow next"><i class="fa-solid fa-chevron-right"></i></label>
+        </div>
+      </div>
+
+      <!-- Slide 4: Test page with BACK arrow -->
+      <div class="slide slide4">
+        <h2>You’re Ready!</h2>
+        <div class="notice">
+          <i class="fa-solid fa-check-circle" style="color:#004AAD;"></i>
+          You’ve completed all training videos. Click below to take the test!
+        </div>
+        <div class="video-wrapper">
+          <!-- BACK arrow to Slide 3 -->
+          <label for="slide3" class="arrow prev"><i class="fa-solid fa-chevron-left"></i></label>
+        </div>
+        <div class="mobile-nav">
+          <label for="slide3" class="arrow prev"><i class="fa-solid fa-chevron-left"></i></label>
+          <label for="slide4" class="arrow next"><i class="fa-solid fa-chevron-right"></i></label>
+        </div>
+        <button id="testButton" class="btn">Take Certification Test</button>
+      </div>
+    </div>
   </div>
 
+  <!-- HeyForm embed & confetti -->
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
   <script src="https://www.unpkg.com/@heyform-inc/embed@latest/dist/index.umd.js"></script>
   <script>
-    // confetti on slide4…
-    slide4.addEventListener('change', …);
+    // fire confetti on final slide
+    document.getElementById('slide4').addEventListener('change', e => {
+      if (e.target.checked) {
+        confetti({ particleCount: 100, spread: 70, origin: { y: 0.6 } });
+      }
+    });
 
-    // open modal via HTTPS
+    // open HeyForm modal on button click
     document.getElementById('testButton').addEventListener('click', () => {
       HeyForm.openModal('fPdwIszH');
     });
