--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     .slide {
       display: none;
     }
-    /* Active slide */
+    /* Active slide becomes visible & centered */
     #slide1:checked ~ .video-slider-wrapper .slide1,
     #slide2:checked ~ .video-slider-wrapper .slide2,
     #slide3:checked ~ .video-slider-wrapper .slide3,
@@ -64,40 +64,49 @@
     .video-container {
       position: relative;
       width: 100%;
-      padding-bottom: 56.25%;
+      padding-bottom: 56.25%; /* 16:9 ratio */
       height: 0;
       overflow: hidden;
       border-radius: 8px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
     .video-container iframe {
-      position: absolute; top: 0; left: 0;
+      position: absolute;
+      top: 0; left: 0;
       width: 100%; height: 100%;
       border: none;
     }
 
     /* Desktop side arrows */
     .video-wrapper .arrow {
-      position: absolute; top: 50%;
+      position: absolute;
+      top: 50%;
       transform: translateY(-50%);
       width: 50px; height: 50px;
       background: #004AAD;
       color: #fff;
       border-radius: 50%;
-      display: flex; align-items: center; justify-content: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       cursor: pointer;
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
       transition: background 0.2s;
     }
-    .video-wrapper .arrow:hover { background: #00337A; }
+    .video-wrapper .arrow:hover {
+      background: #00337A;
+    }
     .video-wrapper .prev { left: -70px; }
     .video-wrapper .next { right: -70px; }
     /* Phantom placeholders */
-    .slide1 .prev, .slide4 .next { visibility: hidden; }
+    .slide1 .prev, .slide4 .next {
+      visibility: hidden;
+    }
 
     /* Mobile nav under the video */
     .mobile-nav {
-      display: none; width: 100%;
+      display: none;           /* hidden on desktop/medium */
+      width: 100%;
       margin-top: 20px;
       justify-content: space-between;
       align-items: center;
@@ -105,20 +114,27 @@
     }
     .mobile-nav .arrow {
       width: 50px; height: 50px;
-      background: #004AAD; color: #fff;
+      background: #004AAD;
+      color: #fff;
       border-radius: 50%;
-      display: flex; align-items: center; justify-content: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       cursor: pointer;
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
       transition: background 0.2s;
     }
-    .mobile-nav .arrow:hover { background: #00337A; }
+    .mobile-nav .arrow:hover {
+      background: #00337A;
+    }
 
     @media (max-width: 768px) {
       .video-wrapper .arrow { display: none; }
       .mobile-nav { display: flex; }
       .slide1 .mobile-nav .prev,
-      .slide4 .mobile-nav .next { visibility: hidden; }
+      .slide4 .mobile-nav .next {
+        visibility: hidden;
+      }
     }
 
     /* Title & notice */
@@ -138,7 +154,9 @@
       margin: 0 auto 20px;
       border-radius: 4px;
     }
-    .slide .notice i { color: #004AAD; }
+    .slide .notice i {
+      color: #004AAD;
+    }
 
     /* Test button styling - centered */
     .btn {
@@ -153,16 +171,18 @@
       cursor: pointer;
       transition: background 0.25s ease;
     }
-    .btn:hover { background: #00337A; }
+    .btn:hover {
+      background: #00337A;
+    }
   </style>
 </head>
 <body>
 
-  <!-- HeyForm modal configuration -->
+  <!-- HeyForm modal (HTTPS) -->
   <div
     data-heyform-id="fPdwIszH"
     data-heyform-type="modal"
-    data-heyform-custom-url="https//stafftools-heyform-d7f372-45-76-22-23.traefik.me/form/"
+    data-heyform-custom-url="https://stafftools-heyform-d7f372-45-76-22-23.traefik.me/form/"
     data-heyform-size="large"
     data-heyform-open-trigger="manual"
     data-heyform-trigger-background="#1d4ed8"
@@ -194,9 +214,11 @@
         <div class="video-wrapper">
           <label for="slide1" class="arrow prev"><i class="fa-solid fa-chevron-left"></i></label>
           <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/videoseries?list=PLG0DGUHeVSlY4zgtv--3KrABC71q5ib8M"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+            <iframe
+              src="https://www.youtube.com/embed/videoseries?list=PLG0DGUHeVSlY4zgtv--3KrABC71q5ib8M"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen>
+            </iframe>
           </div>
           <label for="slide2" class="arrow next"><i class="fa-solid fa-chevron-right"></i></label>
         </div>
@@ -216,9 +238,11 @@
         <div class="video-wrapper">
           <label for="slide1" class="arrow prev"><i class="fa-solid fa-chevron-left"></i></label>
           <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/videoseries?list=ANOTHER_PLAYLIST_ID_2"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+            <iframe
+              src="https://www.youtube.com/embed/videoseries?list=ANOTHER_PLAYLIST_ID_2"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen>
+            </iframe>
           </div>
           <label for="slide3" class="arrow next"><i class="fa-solid fa-chevron-right"></i></label>
         </div>
@@ -238,9 +262,11 @@
         <div class="video-wrapper">
           <label for="slide2" class="arrow prev"><i class="fa-solid fa-chevron-left"></i></label>
           <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/videoseries?list=ANOTHER_PLAYLIST_ID_3"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+            <iframe
+              src="https://www.youtube.com/embed/videoseries?list=ANOTHER_PLAYLIST_ID_3"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen>
+            </iframe>
           </div>
           <label for="slide4" class="arrow next"><i class="fa-solid fa-chevron-right"></i></label>
         </div>
@@ -258,7 +284,6 @@
           You’ve completed all training videos. Click below to take the test!
         </div>
         <div class="video-wrapper">
-          <!-- BACK arrow to Slide 3 -->
           <label for="slide3" class="arrow prev"><i class="fa-solid fa-chevron-left"></i></label>
         </div>
         <div class="mobile-nav">
@@ -270,18 +295,19 @@
     </div>
   </div>
 
-  <!-- HeyForm embed & confetti -->
+  <!-- Canvas-Confetti for celebration -->
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+  <!-- HeyForm embed script -->
   <script src="https://www.unpkg.com/@heyform-inc/embed@latest/dist/index.umd.js"></script>
   <script>
-    // fire confetti on final slide
+    // Fire confetti on final slide
     document.getElementById('slide4').addEventListener('change', e => {
       if (e.target.checked) {
         confetti({ particleCount: 100, spread: 70, origin: { y: 0.6 } });
       }
     });
 
-    // open HeyForm modal on button click
+    // Open HeyForm modal on button click
     document.getElementById('testButton').addEventListener('click', () => {
       HeyForm.openModal('fPdwIszH');
     });
